# hangman_new

./: README.md  setup.cfg  setup.py  test.py
hangman/: __init__.py
hangman.egg-info/: PKG-INFO  SOURCES.txt
